[tool.poetry]
name = "prizewheelstatistics"
version = "0.1.0"
description = "抽奖转盘礼物统计"
authors = ["铂屑 <1824390830@qq.com>"]

[tool.poetry.dependencies]
python = "~3.11.3"
openpyxl = "^3.1.2"
pandas = "^2.0.3"
pyinstaller = "^5.13.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
